--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:52-0400\n"
-"PO-Revision-Date: 2012-07-26 00:36+0000\n"
-"Last-Translator: John Lindgren <john.lindgren@aol.com>\n"
+"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"PO-Revision-Date: 2012-08-02 15:08+0000\n"
+"Last-Translator: Jorge A. García Sosa <jagsmd@gmail.com>\n"
 "Language-Team: Spanish (Mexican)\n"
 "Language: es_MX\n"
 "MIME-Version: 1.0\n"
@@ -158,7 +158,7 @@ msgstr "Lista de Reproducción (opcional)"
 
 #: src/alarm/interface.c:1075
 msgid "Select a playlist"
-msgstr ""
+msgstr "Selecciona una lista de reproducción"
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
@@ -228,6 +228,54 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
+"\n"
+"Hora\n"
+"  Alarma a las: \n"
+"    La hora a la que la alarma encenderá.\n"
+"\n"
+"  Silencio después: \n"
+"    Detiene la alarma después de esta cantidad de tiempo.\n"
+"       (si el dialogo para despertar no está cerrado)\n"
+"\n"
+"\n"
+"Días\n"
+"  Día:\n"
+"    Selecciona los días que la alarma se activará.\n"
+"\n"
+"  Hora:\n"
+"    Escoge la hora para la alarma de cada día,\n"
+"    o selecciona el botón para usar la hora predeterminada.\n"
+"\n"
+"\n"
+"Volumen\n"
+"  Desvanecimiento: \n"
+"    Disminuye el volumen hasta el volumen escogido \n"
+"    para esta cantidad de tiempo.\n"
+"\n"
+"  Comenzar a : \n"
+"    Comienza la disminución desde este volumen.\n"
+"\n"
+"  Final: \n"
+"    El volumen para detener el desvanecimiento.  Si el tiempo de "
+"desvanecimiento es 0 entonces coloca el volumen a este valor e inicia la\n"
+"    reproducción.\n"
+"\n"
+"\n"
+"Opciones:\n"
+"  Comando Adicional:\n"
+"    Ejecuta este comando al activar la alarma.\n"
+"\n"
+"  Lista de Reproducción: \n"
+"    Carga esta lista de reproducción para reproducir.\n"
+"    Si no es dada una lista, las pistas que están actualmente\n"
+"    en la lista serán usadas.\n"
+"    El URL de un stream mp3/ogg  también puede ser\n"
+"    ingresado aquí.\n"
+"\n"
+"  Recordatorio:\n"
+"    Muestra un recordatorio cuando la alarma se apague,\n"
+"    escribe el recordatorio en la caja y enciende\n"
+"    el botón si quieres que se muestre.\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
