--- a/po/gl.po
+++ b/po/gl.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:52-0400\n"
-"PO-Revision-Date: 2012-07-26 00:36+0000\n"
-"Last-Translator: John Lindgren <john.lindgren@aol.com>\n"
+"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"PO-Revision-Date: 2012-07-26 07:19+0000\n"
+"Last-Translator: mbouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -160,7 +160,7 @@ msgstr "Lista de reprodución (opcional)"
 
 #: src/alarm/interface.c:1075
 msgid "Select a playlist"
-msgstr ""
+msgstr "Escolla a lista de reprodución"
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
@@ -230,6 +230,54 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
+"\n"
+"Hora\n"
+"  Alarma en: \n"
+"    O tempo para que se inicie a alarma.\n"
+"\n"
+"  Sienciar despois de: \n"
+"    Deter a alarma transcorrido este tempo.\n"
+"       (se o diálgo do espertador non está pechado)\n"
+"\n"
+"\n"
+"Días\n"
+"  Día:\n"
+"    Seleccione os días para activar a alarma.\n"
+"\n"
+"  Hora:\n"
+"    Escolla a hora da alarma en cada día,\n"
+"    ou seleccione o botón de activación para usar\n"
+"    a hora predeterminada.\n"
+"\n"
+"\n"
+"Volume\n"
+"  Atenuación: \n"
+"    Incrementa o volume ao nivel inficado\n"
+"    durante este tempo.\n"
+"\n"
+"  Comezar con: \n"
+"    Start fading from this volume.\n"
+"\n"
+"  Final: \n"
+"    O volume no que se deterá o incremento.\n"
+"    Se o tempo de atenuación é 0 porá o volume\n"
+"    a este nivel  e iniciará a reprodución.\n"
+"\n"
+"\n"
+"Opcións:\n"
+"  Orde adicional:\n"
+"    Executar esta orde na hora da alarma.\n"
+"\n"
+"  Lista de reprodución: \n"
+"    Cargue esta lista de reprodución para reproducila.\n"
+"    Se non se indica unha lista, empregarase as cancións\n"
+"    da lista actual.\n"
+"    Tamén pode indicar o URL dun fluxo mp3/ogg.\n"
+"\n"
+"  Recordatorio:\n"
+"     Amosar un aviso cando se activa a alarma,\n"
+"     escriba o recordatorio na caixa e active o\n"
+"     botón para que sexa amosado o aviso.\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
