--- a/po/ja.po
+++ b/po/ja.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:52-0400\n"
-"PO-Revision-Date: 2012-07-26 00:36+0000\n"
-"Last-Translator: John Lindgren <john.lindgren@aol.com>\n"
+"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"PO-Revision-Date: 2012-07-26 09:33+0000\n"
+"Last-Translator: Shuuji Takahashi <shuuji3@gmail.com>\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -159,7 +159,7 @@ msgstr "プレイリスト (オプション)"
 
 #: src/alarm/interface.c:1075
 msgid "Select a playlist"
-msgstr ""
+msgstr "プレイリストを選択"
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
@@ -229,6 +229,52 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
+"\n"
+"時刻\n"
+"  アラーム時刻:\n"
+"    アラームが鳴る時刻です。\n"
+"\n"
+"  静かになるまでの時間\n"
+"    アラームが鳴り止むまでの時間です。\n"
+"      (めざましダイアログを閉じなかった場合)\n"
+"\n"
+"\n"
+"曜日\n"
+"  曜日:\n"
+"    アラームが鳴る曜日を選択します。\n"
+"\n"
+"  時刻:\n"
+"    それぞれの曜日のアラーム時刻を選択するか、トグ\n"
+"    ルボタンを選択し、デフォルト時刻に設定します。\n"
+"\n"
+"\n"
+"音量:\n"
+"  フェード:\n"
+"    この時間をかけて、選択した音量まで音量をフェー\n"
+"    ドアップします。\n"
+"\n"
+"  開始:\n"
+"    この音量からフェードを始めます。\n"
+"\n"
+"  終了:\n"
+"    この音量でフェードを終わります。\n"
+"\n"
+"\n"
+"オプション:\n"
+"  追加コマンド:\n"
+"    アラーム時刻になると、このコマンドを実行します。\n"
+"\n"
+"  プレイリスト:\n"
+"    曲を再生する時に、このプレイリストをロードしま\n"
+"    す。プレイリストを指定しなかった場合、\n"
+"    リストの再生中の曲が使われます。\n"
+"    mp3 または ogg ストリームの URL を指定すること\n"
+"    もできます。\n"
+"\n"
+"  リマインダ:\n"
+"    アラームが止まった時にリマインダを表示します。\n"
+"    表示するには、テキストボックスにリマインダを入\n"
+"    力し、トグルボタンをオンにしてください。\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
