--- a/po/ko.po
+++ b/po/ko.po
@@ -8,13 +8,14 @@
 #       Man-Yong Lee <yong@linuxkorea.co.kr>, 2000.
 #       Sang-Jin Hwang <accel@accellinux.org>, 1999.
 # 		Seong-ho Cho <darkcircle.0426@gmail.com>, 2012.
+# 	Seong-ho Cho <darkcircle.0426@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:52-0400\n"
-"PO-Revision-Date: 2012-07-26 00:36+0000\n"
-"Last-Translator: John Lindgren <john.lindgren@aol.com>\n"
+"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"PO-Revision-Date: 2012-08-04 07:07+0000\n"
+"Last-Translator: Darkcircle <darkcircle.0426@gmail.com>\n"
 "Language-Team: Korean\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
@@ -162,7 +163,7 @@ msgstr "재생 목록(선택)"
 
 #: src/alarm/interface.c:1075
 msgid "Select a playlist"
-msgstr ""
+msgstr "재생 목록 선택하기"
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
@@ -232,6 +233,54 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
+"\n"
+"시간\n"
+"  다음 시간에 알림: \n"
+"    알림이 울릴 시간입니다.\n"
+"\n"
+"  다음 시간후 조용히: \n"
+"    이 시간이 흐른 이후에 알림을 멈춥니다.\n"
+"       (기상 대화상자가 닫히지 않았을 경우)\n"
+"\n"
+"\n"
+"날짜\n"
+"  요일:\n"
+"    알림을 울릴 요일을 선택합니다.\n"
+"\n"
+"  시간:\n"
+"    각각의 날짜에 알릴 시간을 선택하거나,\n"
+"    기본 시간을 사용하려면 상태 전환단추를\n"
+"    선택합니다.\n"
+"   \n"
+"\n"
+"음량\n"
+"  점진적 음량 변화: \n"
+"    정해진 시간동안 정한 음량 만큼 음량을 서서히\n"
+"    크게 합니다.\n"
+"\n"
+"  시작: \n"
+"    이 음량부터 서서히 크게 합니다.\n"
+"\n"
+"  끝: \n"
+"    음량이 서서히 커지는 것을 멈출 음량값입니다.\n"
+"    점진적 음량 변화 시간이 0이면 이 값을 선택\n"
+"    하고 재생을 시작합니다.\n"
+"\n"
+"\n"
+"옵션:\n"
+"  추가 명령:\n"
+"    알림 시간에 명령을 실행합니다.\n"
+"\n"
+"  재생 목록: \n"
+"    재생할 곡을 불러올 재생 목록을 불러옵니다. \n"
+"    재생 목록이 주어지지 않으면 현재 목록에 있는\n"
+"    곡을 사용할 것입니다.\n"
+"    mp3/ogg 스트림의 주소를 입력할 수도 있습니다.\n"
+"\n"
+"  약속 알리미:\n"
+"    타이머가 끝나면 약속 알리미를 보여줍니다.\n"
+"    약속 알리미를 보이고 싶으면 약속 내용을\n"
+"    상자에 입력하고 전환단추를 켭니다.\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
@@ -835,7 +884,7 @@ msgstr "<b>색</b>"
 
 #: src/blur_scope/blur_scope.c:58
 msgid "Blur Scope"
-msgstr "흐림처리 범위"
+msgstr "흐림처리 스코프"
 
 #: src/bs2b/plugin.c:138
 msgid "Bauer Stereophonic-to-Binaural Preferences"
