--- a/po/lt.po
+++ b/po/lt.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:52-0400\n"
-"PO-Revision-Date: 2012-07-26 00:36+0000\n"
-"Last-Translator: John Lindgren <john.lindgren@aol.com>\n"
+"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"PO-Revision-Date: 2012-07-26 04:52+0000\n"
+"Last-Translator: Algimantas Margevičius <gymka@archlinux.lt>\n"
 "Language-Team: Lithuanian\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
@@ -162,7 +162,7 @@ msgstr "Grojaraštis (nebūtina)"
 
 #: src/alarm/interface.c:1075
 msgid "Select a playlist"
-msgstr ""
+msgstr "Pasirinkite grojaraštį"
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
@@ -232,6 +232,53 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
+"\n"
+"Laikas\n"
+"  Žadinti laiku: \n"
+"    Laikas kada įjungti žadintuvą.\n"
+"\n"
+"Nutilti po: \n"
+"   Po šio laiko tarpo išjungti žadintuvą.\n"
+"      (jei prikėlimo žadintuvas neuždarytas)\n"
+"\n"
+"\n"
+"Dienos\n"
+"  Diena:\n"
+"    Pasirinkite dienas kuriomis įjungti žadintuvą.\n"
+"\n"
+"Laikas:\n"
+"  Pasirinkti kiekvienos dienos žadintuvo laiką,\n"
+"  arba pasirinkti numatytąjį laiką.\n"
+"\n"
+"\n"
+"Garsas\n"
+"  Garsėjimas: \n"
+"     Garsinti iki nurodyto garso, \n"
+"     šį laiko tarpą.\n"
+"\n"
+"  Pradėti nuo: \n"
+"     Pradėti garsinti nuo.\n"
+"\n"
+"  Baigti: \n"
+"    Garsas ties kuriuo baigti garsinti.  Jei garsinimo\n"
+"    laikas yra 0 tada nustatykit garsą šitą ir\n"
+"    pradėkit groti.\n"
+"\n"
+"\n"
+"Pasirinktys:\n"
+"  Papildoma komanda:\n"
+"    Vykdyti šią komandą žadintuvo laiku.\n"
+"\n"
+"Grojaraštis: \n"
+"  Įkelti šį grojaraštį ir groti dainas iš jo. \n"
+"  Jei nenurodytas grojaraštis bus naudojamos \n"
+"  dainos kurios dabar yra sąraše.\n"
+"  mp3/ogg URL taipogi gali būt čia įvestas.\n"
+"\n"
+"Priminimas:\n"
+"  Parodyti priminimą žadintuvui išsijungus,\n"
+"  įveskit priminimą langelyje ir paspauskite patvirtinimo mygtuką\n"
+"  jei norit jog būtų rodomas.\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
