--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:52-0400\n"
-"PO-Revision-Date: 2012-07-26 00:36+0000\n"
-"Last-Translator: John Lindgren <john.lindgren@aol.com>\n"
+"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"PO-Revision-Date: 2012-07-27 11:31+0000\n"
+"Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
 "Language-Team: Portuguese\n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
@@ -159,7 +159,7 @@ msgstr "Lista de reprodução (opcional)"
 
 #: src/alarm/interface.c:1075
 msgid "Select a playlist"
-msgstr ""
+msgstr "Escolha uma lista de reprodução"
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
@@ -229,6 +229,54 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
+"\n"
+"Horário\n"
+"  Alarme às:\n"
+"    A hora em que o alarme inicia\n"
+"\n"
+"  Silenciar após:\n"
+"    A duração do alarme\n"
+"       (se a caixa de diálogo não for fechada)\n"
+"\n"
+"\n"
+"Dias\n"
+"  Dia:\n"
+"    Selecione os dias do alarme\n"
+"\n"
+"  Hora:\n"
+"    Escolha a hora do alarme em cada dia,\n"
+"    ou o botão alternar para utilizar\n"
+"    a hora pré-definida\n"
+"\n"
+"\n"
+"Volume\n"
+"  Desvanecimento:\n"
+"    Aumentar o som até ao volume escolhido\n"
+"    durante este tempo\n"
+"\n"
+"  Iniciar em: \n"
+"    Iniciar o desvanecimento neste valor\n"
+"\n"
+"  Finalizar: \n"
+"    O volume em que o desvanecimento para\n"
+"    Se o valor for 0, definir este valor como\n"
+"    volume e iniciar reprodução\n"
+"\n"
+"\n"
+"Opções:\n"
+"  Comando adicional:\n"
+"    Executar este comando com o alarme\n"
+"\n"
+"  Lista de reprodução:\n"
+"    Carregar esta lista de reprodução e reproduzir\n"
+"    Se não indicar a lista de reprodução,\n"
+"    as faixas que existirem na lista serão as utilizadas\n"
+"    Também pode indicar um URL de uma emissão mp3/ogg\n"
+"\n"
+"  Lembrete:\n"
+"    Mostra um lembrete se o alarme for desligado\n"
+"    Escreva-o na caixa e ative o botão alternar\n"
+"    se quiser mostrar o lembrete\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
